<resources>
    <string name="app_name">Indoor Setup</string>

    <string name="title_section1">Registered Beacons</string>
    <string name="title_section2">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings1">Synchronize with Database</string>
    <string name="action_settings2">Update Database</string>
    <string name="title_activity_about">About</string>

    <string name="act_beacons">Beacon Information</string>
    <string name="zone_input">Enter Zone</string>
    <string name="zone_label">Zone:</string>
    <string name="major_label">Major:</string>
    <string name="minor_label">Minor:</string>
    <string name="posx_label">Pos X:</string>
    <string name="posy_label">Pos Y:</string>
    <string name="posx_input">Enter X position</string>
    <string name="posy_input">Enter Y position</string>
    <string name="new_beacon_btn">New Beacon</string>
    <string name="save_btn">Save</string>

    <!-- Beacon Info -->

</resources>
